# noslop

./: .gitignore  Cargo.toml  README.md  skills-lock.json
.agents/skills/noslop/: SKILL.md
.agents/skills/noslop/references/: cli-reference.md  gotchas.md  json-schema.md  patterns.md
crates/noslop-cli/: Cargo.toml
crates/noslop-cli/src/: explain.rs  fix_cmd.rs  graph_cmd.rs  init.rs  main.rs  watch.rs
crates/noslop-core/: Cargo.toml
crates/noslop-core/src/: cache.rs  config.rs  lib.rs
crates/noslop-core/tests/: fixture_annotations.rs  fixture_complexity.rs  fixture_duplication.rs  fixture_fix.rs  fixture_mixed.rs  fixture_policy.rs  fixture_roles.rs  fixture_style.rs  fixture_symbols.rs
crates/noslop-discover/: Cargo.toml  build.rs
crates/noslop-discover/src/: builtin_plugins.rs  lib.rs  manifest.rs  plugin_def.rs  registry.rs
crates/noslop-extract/: Cargo.toml
crates/noslop-extract/src/: complexity.rs  css.rs  lib.rs  python.rs  tokens.rs  typescript.rs
crates/noslop-fix/: Cargo.toml
crates/noslop-fix/src/: apply.rs  diff.rs  lib.rs  plan.rs  snapshot.rs
crates/noslop-fix/src/edits/: import.rs  lines.rs  manifest.rs  mod.rs
crates/noslop-graph/: Cargo.toml
crates/noslop-graph/src/: analysis.rs  complexity_metrics.rs  facts.rs  finding.rs  ids.rs  ir.rs  lib.rs  workspace.rs
crates/noslop-passes/: Cargo.toml
crates/noslop-passes/src/: complexity.rs  confidence.rs  cycles.rs  dead_files.rs  deps.rs  duplication.rs  exports.rs  imports.rs  lib.rs  policy.rs  reach.rs  style.rs  symbols.rs
crates/noslop-report/: Cargo.toml
crates/noslop-report/src/: graphs.rs  health.rs  lib.rs  metrics.rs  pretty.rs  sarif.rs
crates/noslop-resolve/: Cargo.toml
crates/noslop-resolve/src/: lib.rs  path.rs  py.rs  ts.rs
crates/noslop-viz/: Cargo.toml
crates/noslop-viz/src/: export.rs  html.rs  layout.rs  lib.rs  model.rs  svg.rs  theme.rs  tree.rs
fixtures/annotations/: main.py  noslop.toml  package.json  service.py
fixtures/annotations/src/: index.ts  lib.ts
fixtures/complexity/: main.py  noslop.toml  package.json
fixtures/complexity/src/: big.ts  index.ts
fixtures/complexity/src/legacy/: old.ts
fixtures/duplication/: noslop.toml  package.json  worker_a.py  worker_b.py
fixtures/duplication/src/: a.ts  b.ts  chain.ts
fixtures/mixed/: demo.sh  noslop.toml  package.json
fixtures/mixed/apps/api/: pyproject.toml
fixtures/mixed/apps/web/: package.json  tsconfig.json
fixtures/mixed/apps/worker/: pyproject.toml
fixtures/policy/: noslop.toml  package.json  worker.py
fixtures/policy/policy/: team.toml
fixtures/policy/src/: index.ts
fixtures/roles/: eslint.config.mjs  main.py  next-env.d.ts  package.json
fixtures/roles/deadpkg/: __init__.py
fixtures/roles/pkg/: __init__.py
fixtures/style/: noslop.toml  package.json
fixtures/style/src/: App.tsx  theme.css
fixtures/symbols/: main.py  package.json  service.py
fixtures/symbols/src/: index.ts  types.ts  widget.ts
plugins/: _fallback.toml  adonis.toml  angular.toml  astro.toml  ava.toml  babel.toml  biome.toml  bun.toml  c8.toml  capacitor.toml  celery.toml  changesets.toml  click.toml  commitizen.toml  commitlint.toml  content-collections.toml  contentlayer.toml  convex.toml  cspell.toml  cucumber.toml  cypress.toml  danger.toml  dependency-cruiser.toml  django.toml  docusaurus.toml  drizzle.toml  electron.toml  ember.toml  eslint.toml  expo-router.toml  expo.toml  express.toml  fastapi.toml  flask.toml  fumadocs.toml  gatsby.toml  graphql-codegen.toml  gunicorn.toml  hardhat.toml  husky.toml  (+82 more)
schema/: report.v1.schema.json
scripts/: generate_fallow_plugins.py
(+33 files in other folders)
