[package]
name = "noslop-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "noslop"
path = "src/main.rs"

[dependencies]
noslop-core = { workspace = true }
noslop-report = { workspace = true }
noslop-graph = { workspace = true }
noslop-viz = { workspace = true }
noslop-discover = { workspace = true }
noslop-fix = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
