[package]
name = "noslop-discover"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
noslop-graph = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
noslop-extract = { workspace = true }
