[package]
name = "noslop-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
noslop-graph = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-css = { workspace = true }
xxhash-rust = { workspace = true }
