[package]
name = "noslop-fix"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
noslop-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
